[project]
name = "dock-thor-client"
version = "1.0.3"
description = "Python client for DockTHOR error reporting"
authors = [{ name = "Jacek Labudda" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["error reporting", "monitoring", "async", "fastapi", "logging"]
dependencies = ["httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
